--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.+'
     compile 'com.parse.bolts:bolts-android:1.+'
+    compile 'org.jsoup:jsoup:1.7.3'
+
 }
