--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,7 @@
         </activity>
 	    <activity
 		    android:name=".MainActivity"
-		    android:label="@string/app_name"
-		    android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+		    android:label="@string/app_name"/>
 
 	    <activity
 		    android:name=".LoginActivity"
